# repo_analyzer_agent

./: .env.example  .gitignore  BRIDGE_INTEGRATION.md  CLAUDE.md  ORIGIN.md  README.md  RESEARCH_CODE_BRIDGE_SPECIFICATION.md  STRATEGIC_QUESTIONS.md  STYLE_GUIDE.md  UNIFIED_FRAMEWORK.md  pyproject.toml  repository_scout_project.md  requirements.txt  scout.py  setup.py  test_demo.py
mcp_scout/: __init__.py  analyzer.py  cli.py  config.py  github_client.py  mcp_config_gen.py  models.py  scorer.py  scout.py
repo_scout/: __init__.py  analyzer.py  cli.py  config.py  models.py  scorer.py  scout.py
tests/: __init__.py  test_cli.py  test_github_client.py  test_models.py  test_scorer.py
